# mocha-dock

./: .gitignore  CHANGELOG.md  CMakeLists.txt  EXPLANATION.md  INSTALLATION.md  Messages.sh  PKGBUILD  README.md  default.nix  dev-build.sh  flake.nix  install.sh  package-binary.sh  package-source.sh  run-mocha.sh  uninstall.sh
app/: CMakeLists.txt  FakeTarget.cmake  alternativeshelper.cpp  apptypes.h  config-latte.h.cmake  config-mocha.h.cmake  infoview.cpp  infoview.h  lattecorona.cpp  lattecorona.h  main.cpp  mocha-indicators.knsrc  mocha-layouts.knsrc  mochacorona.cpp  mochacorona.h  mochadock.notifyrc  org.kde.mocha-dock.appdata.xml.cmake  org.kde.mocha-dock.desktop.cmake  primaryoutputwatcher.cpp  primaryoutputwatcher.h  screenpool.cpp  screenpool.h
app/data/: CMakeLists.txt  activitydata.cpp  activitydata.h  appletdata.cpp  appletdata.h  contextmenudata.h  errordata.cpp  errordata.h  errorinformationdata.cpp  errorinformationdata.h  genericbasictable.cpp  genericbasictable.h  genericdata.cpp  genericdata.h  generictable.cpp  generictable.h  layoutcolordata.cpp  layoutcolordata.h  layoutdata.cpp  layoutdata.h  layouticondata.cpp  layouticondata.h  layoutstable.cpp  layoutstable.h  preferencesdata.cpp  preferencesdata.h  screendata.cpp  screendata.h  uniqueidinfo.cpp  uniqueidinfo.h  viewdata.cpp  viewdata.h  viewstable.cpp  viewstable.h
app/dbus/: org.kde.MochaDock.xml
app/declarativeimports/: CMakeLists.txt  contextmenulayerquickitem.cpp  contextmenulayerquickitem.h  interfaces.cpp  interfaces.h
app/indicator/: CMakeLists.txt  factory.cpp  factory.h
app/layout/: CMakeLists.txt  abstractlayout.cpp  abstractlayout.h  centrallayout.cpp  centrallayout.h  genericlayout.cpp  genericlayout.h
app/layouts/: CMakeLists.txt  importer.cpp  importer.h  manager.cpp  manager.h  storage.cpp  storage.h  syncedlaunchers.cpp  syncedlaunchers.h  synchronizer.cpp  synchronizer.h
app/package/: CMakeLists.txt  mochapackage.cpp  mochapackage.h
app/packageplugins/indicator/: CMakeLists.txt  indicatorpackage.cpp  indicatorpackage.h  latte-indicator.desktop  mocha-packagestructure-indicator.json
app/plasma/extended/: CMakeLists.txt  backgroundcache.cpp  backgroundcache.h  backgroundtracker.cpp  backgroundtracker.h  panelbackground.cpp  panelbackground.h  screengeometries.cpp  screengeometries.h  screenpool.cpp  screenpool.h  theme.cpp  theme.h
app/settings/: CMakeLists.txt  settingswindow.cpp  settingswindow.h  universalsettings.cpp  universalsettings.h
app/settings/actionsdialog/: CMakeLists.txt  actionlistwidgetitem.cpp  actionlistwidgetitem.h  actionsdialog.cpp  actionsdialog.h  actionshandler.cpp  actionshandler.h
app/settings/detailsdialog/: CMakeLists.txt  colorsmodel.cpp  colorsmodel.h  detailsdialog.cpp  detailsdialog.h  detailsdialog.ui  detailshandler.cpp  detailshandler.h  patternwidget.cpp  patternwidget.h  schemescombobox.cpp  schemescombobox.h  schemesmodel.cpp  schemesmodel.h
app/settings/exporttemplatedialog/: CMakeLists.txt  appletsmodel.cpp  appletsmodel.h  exporttemplatedialog.cpp  exporttemplatedialog.h  exporttemplatedialog.ui  exporttemplatehandler.cpp  exporttemplatehandler.h
app/settings/generic/: CMakeLists.txt  genericdialog.cpp  genericdialog.h  generichandler.cpp  generichandler.h  generictools.cpp  generictools.h  genericviewtools.cpp  genericviewtools.h  layoutscombobox.cpp  layoutscombobox.h  persistentmenu.cpp  persistentmenu.h
app/settings/screensdialog/: CMakeLists.txt  screensdialog.cpp  screensdialog.h  screenshandler.cpp  screenshandler.h  screensmodel.cpp  screensmodel.h
app/settings/settingsdialog/: CMakeLists.txt  layoutscontroller.cpp  layoutscontroller.h  layoutsheaderview.cpp  layoutsheaderview.h  layoutsmodel.cpp  layoutsmodel.h  layoutstableview.cpp  layoutstableview.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tablayoutshandler.cpp  tablayoutshandler.h  tabpreferenceshandler.cpp  tabpreferenceshandler.h  templateskeeper.cpp  templateskeeper.h
app/settings/viewsdialog/: CMakeLists.txt  viewscontroller.cpp  viewscontroller.h  viewsdialog.cpp  viewsdialog.h  viewsdialog.ui  viewshandler.cpp  viewshandler.h  viewsmodel.cpp  viewsmodel.h  viewstableview.cpp  viewstableview.h
app/shortcuts/: CMakeLists.txt  globalshortcuts.cpp  globalshortcuts.h  modifiertracker.cpp  modifiertracker.h  shortcutstracker.cpp  shortcutstracker.h
app/templates/: CMakeLists.txt  templatesmanager.cpp  templatesmanager.h
app/tools/: CMakeLists.txt  commontools.cpp  commontools.h
app/view/: CMakeLists.txt  clonedview.cpp  clonedview.h  containmentinterface.cpp  containmentinterface.h  effects.cpp  effects.h  eventssink.cpp  eventssink.h  originalview.cpp  originalview.h  parabolic.cpp  parabolic.h  positioner.cpp  positioner.h  tasksmodel.cpp  tasksmodel.h  view.cpp  view.h  visibilitymanager.cpp  visibilitymanager.h
app/view/helpers/: subwindow.h  (+6 more)
app/wm/: CMakeLists.txt  abstractwindowinterface.cpp  abstractwindowinterface.h  schemecolors.cpp  schemecolors.h  tasktools.cpp  waylandinterface.cpp  waylandinterface.h  windowinfowrap.cpp  windowinfowrap.h  windowmanager.cpp  windowmanager.h  xwindowinterface.cpp  xwindowinterface.h
containment/: CMakeLists.txt  Messages.sh
containment/package/: metadata.json
containment/plugin/: lattecontainmentplugin.cpp  layoutmanager.cpp  layoutmanager.h  mochacontainmentplugin.cpp  mochacontainmentplugin.h  qmldir  types.h
containmentactions/contextmenu/: CMakeLists.txt  Messages.sh  layoutmenuitemwidget.cpp  menu.cpp  plasma-containmentactions-mochacontextmenu.json
declarativeimports/core/: CMakeLists.txt  config-latte-lib.h.cmake  dialog.cpp  dialog.h  environment.cpp  environment.h  extras.h  iconitem.cpp  iconitem.h  lattecoreplugin.cpp  mochacoreplugin.cpp  mochacoreplugin.h  qmldir  quickwindowsystem.cpp  quickwindowsystem.h  tools.cpp  tools.h
icons/: CMakeLists.txt
plasmoid/: CMakeLists.txt  Messages.sh
plasmoid/package/: metadata.json
plasmoid/plugin/: lattetasksplugin.cpp  launcherhelper.cpp  launcherhelper.h  mochatasksplugin.cpp  mochatasksplugin.h  qmldir  types.h
(+584 files in other folders)
